Fixed: alignment issue with custom menu item when set outside with stack menu style

--- a/assets/css/unminified/editor-style.css
+++ b/assets/css/unminified/editor-style.css
@@ -199,8 +199,6 @@ figure {
 }
 
 hr {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
   height: 0;
 }
@@ -260,8 +258,6 @@ input {
 
 input[type="checkbox"],
 input[type="radio"] {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   padding: 0;
 }
@@ -273,15 +269,12 @@ input[type="number"]::-webkit-outer-spin-button {
 
 input[type="search"] {
   -webkit-appearance: textfield;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
   box-sizing: content-box;
 }
 
 .search .search-submit,
 #comments .submit {
   padding: 10px 15px;
-  -webkit-border-radius: 2px;
   border-radius: 2px;
 }
 
@@ -1305,8 +1298,6 @@ h6,
 # Elements
 --------------------------------------------------------------*/
 html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -1314,8 +1305,6 @@ html {
 *:before,
 *:after {
   /* Inherit box-sizing to make it easier to change the property for components that leverage other behavior; see http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
   box-sizing: inherit;
 }
 
@@ -1519,7 +1508,6 @@ input[type="reset"],
 input[type="submit"] {
   border: 1px solid;
   border-color: #eaeaea;
-  -webkit-border-radius: 2px;
   border-radius: 2px;
   background: #e6e6e6;
   padding: .6em 1em .4em;
@@ -1565,7 +1553,6 @@ input[type="tel"],
 textarea {
   color: #666;
   border: 1px solid #ccc;
-  -webkit-border-radius: 2px;
   border-radius: 2px;
   -webkit-appearance: none;
 }
@@ -1599,9 +1586,7 @@ textarea {
 
 .screen-reader-text:focus {
   background-color: #f1f1f1;
-  -webkit-border-radius: 2px;
   border-radius: 2px;
-  -webkit-box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
   clip: auto !important;
   color: #21759b;
@@ -1769,10 +1754,6 @@ object {
 /*----------  Media Query max-width Structure   ----------*/
 /*----------  Break-point min-width Structure   ----------*/
 /*----------  Break-point max-width Structure   ----------*/
-::-moz-selection {
-  color: #fff;
-  background: #0274be;
-}
 ::selection {
   color: #fff;
   background: #0274be;
@@ -1804,7 +1785,6 @@ a,
 .site-header a *,
 .site-footer a *,
 .secondary a * {
-  -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
 
@@ -1841,11 +1821,9 @@ blockquote {
 .button,
 input[type="button"],
 input[type="submit"] {
-  -webkit-border-radius: 0;
   border-radius: 0;
   padding: 18px 30px;
   border: 0;
-  -webkit-box-shadow: none;
   box-shadow: none;
   text-shadow: none;
 }
@@ -1854,7 +1832,6 @@ input[type="submit"] {
 .button:hover,
 input[type="button"]:hover,
 input[type="submit"]:hover {
-  -webkit-box-shadow: none;
   box-shadow: none;
 }
 
@@ -1865,16 +1842,10 @@ input[type="button"]:active,
 input[type="button"]:focus,
 input[type="submit"]:active,
 input[type="submit"]:focus {
-  -webkit-box-shadow: none;
   box-shadow: none;
 }
 
 .site-title {
-  -js-display: flex;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: flex;
   font-weight: normal;
 }
@@ -1890,7 +1861,6 @@ input[type="submit"]:focus {
 .site-description a,
 .site-description:hover a,
 .site-description:focus a {
-  -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
 }
 
@@ -1925,7 +1895,6 @@ input[type="submit"]:focus {
   top: 0;
   right: 0;
   padding: 0 1em;
-  -webkit-border-radius: 0;
   border-radius: 0;
 }
 
@@ -1938,7 +1907,6 @@ input[type="submit"]:focus {
 /* must have higher specificity than alternative color schemes inline styles */
 .site .skip-link {
   background-color: #f1f1f1;
-  -webkit-box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.2);
   color: #21759b;
   display: block;
@@ -1963,7 +1931,6 @@ input[type="submit"]:focus {
 }
 
 .logged-in .site .skip-link {
-  -webkit-box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
   font-family: "Open Sans", sans-serif;
 }
@@ -2007,7 +1974,6 @@ textarea {
 .gallery-caption {
   color: black;
   padding: 10px;
-  -webkit-border-radius: 0 0 2px 2px;
   border-radius: 0 0 2px 2px;
   border: 1px solid #eaeaea;
   border-top: none;
@@ -2016,7 +1982,6 @@ textarea {
 
 .gallery-icon {
   border-bottom: 0;
-  -webkit-border-radius: 2px 2px 0 0;
   border-radius: 2px 2px 0 0;
   border: 1px solid #eaeaea;
   overflow: hidden;
@@ -2025,7 +1990,6 @@ textarea {
 .gallery-item {
   margin: 0;
   padding: 10px;
-  -webkit-border-radius: 2px;
   border-radius: 2px;
 }
 
